# lineart

./: .flake8  .gitignore  .vpype-dave.toml  .vpype.toml  2022-05-01_shattered_line_tiles.ipynb  README.md  Untitled.ipynb  example.py  first_lineart.ipynb  out.gcode  pyproject.toml  requirements.txt  rotating_sample_example.py  shatter_exploration.ipynb  vpype_test.gcode
lineart/: decorators.py  draw.py  primatives.py  projection.py  shapes.py  style.py  transform.py  transforms.py
notebooks/: 2022-01-01_tiling_and_shape_exploratin.ipynb  2022-05-01_shattered_line_tiles.ipynb  2022-05-17_shattered_lines_demo.ipynb  2022-05-17_shattered_tiles_iteration.ipynb  2022-10-14_perspective_cube.ipynb  2022-10-14_shattered_projections.ipynb  2022-10_15_big_shattered_gif.ipynb  2024-06-05_perlin_stick_meadow.ipynb
