[tool.poetry]
name = "lineart"
version = "0.1.0"
description = ""
authors = ["Leo Browning <leo.browning@qrious.co.nz>"]

[tool.poetry.dependencies]
python = ">=3.8.13,<3.11"
jupyterlab = "^2.2.9"
numpy = "^1.19.4"
flat = "^0.3.2"
vpype = "^1.10.0"
vpype-gcode = "^0.11.0"
setuptools = "51.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flake8 = "^3.8.4"
black = "^20.8b1"
rope = "^0.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
