[tool.poetry]
name = "lineart"
version = "0.1.0"
description = ""
authors = ["Leo Browning <leo.browning@qrious.co.nz>"]

[tool.poetry.dependencies]
python = ">3.11"
jupyterlab = "^2.2.9"
numpy = "^1.19.4"
flat = "^0.3.2"
colorama = "0.4.4"
PyYAML = "^6.0"
tqdm = "^4.64.1"
setuptools = "51.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flake8 = "^3.8.4"
rope = "^0.18.0"
black = "^22.3.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.4.2"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
extend-exclude = '''
/(
  | .venv/
)/
'''


[tool.pytest.ini_options]
addopts = "-vs"
asyncio_mode="auto"
